syntax = "proto3";

package greet;
option go_package = "greet/greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetEveryoneRequest {
  Greeting greeting = 1;
}

message GreetEveryoneResponse {
  string result = 1;
}

service GreetService{
  // Unary API
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  rpc AdditionOperation (SumRequest) returns (SumResponse) {};

  // Server Streaming
  rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

  // Client Streaming
  rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};

  // Bidirectional Streaming
  rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse);
}